<resources>
    <string name="app_name">MontyJanken</string>
    <string name="app_title">Janken in Monty hole</string>
    <string name="start_main_mode">Start</string>
    <string name="select_rock">Select Rock hand</string>
    <string name="select_scissor">Select Scissor hand</string>
    <string name="select_paper">Select Paper hand</string>
    <string name="select_first_hand">Select your starting hand</string>
    <string name="check_selected">Your first selected hand is %1$s.</string>
    <string name="show_not_used_hand">I will NOT use %1$s.\nWhich hand you select?</string>
    <string name="hand_rock">Rock</string>
    <string name="hand_scissor">Scissor</string>
    <string name="hand_paper">Paper</string>
    <string name="result_win">You Win</string>
    <string name="result_lose">You Lose</string>
    <string name="game_summary">Your first hand is %1$s. And you %2$s.\nYou %3$s to %4$s,</string>
    <string name="summary_change">changed</string>
    <string name="summary_nochange">didn\'t change</string>
    <string name="summary_win">won</string>
    <string name="summary_lose">lost</string>
    <string name="next_game">Next Game</string>
    <string name="statics_title">Game Statics</string>
    <string name="statics_count_title">Games</string>
    <string name="statics_title_win_count">Wins</string>
    <string name="statics_type_count">Player Choice</string>
    <string name="statics_title_win_rate">Win Rate</string>
    <string name="statics_type_all">All</string>
    <string name="statics_type_change">Changed</string>
    <string name="statics_type_not_change">Not Change</string>
    <string name="clear_history">Clear history</string>
    <string name="auto_match">Auto match</string>
    <string name="rate_format" translatable="false">%1$d%%</string>
    <string name="back_to_title">Go to Title</string>
    <string name="create_sample_confirm">I will add 1000 games for sample. This may take time. Can I start now?</string>
    <string name="create">Create</string>
    <string name="cansel">Cansel</string>
    <string name="clear_history_confirm">All history will be REMOVED. Do you want to clear?</string>
    <string name="delete">Delete</string>
</resources>